WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270146
[view-transitions] Fix white flash on certain demos
https://bugs.webkit.org/show_bug.cgi?id=270146
Summary
[view-transitions] Fix white flash on certain demos
Tim Nguyen (:ntim)
Reported
2024-02-26 21:13:22 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-26 21:13:57 PST
<
rdar://problem/123668861
>
Tim Nguyen (:ntim)
Comment 2
2024-03-19 22:58:38 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26175
Tim Nguyen (:ntim)
Comment 3
2024-03-19 23:12:45 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/45212
EWS
Comment 4
2024-03-20 01:26:44 PDT
Committed
276396@main
(1a69a06fefcb): <
https://commits.webkit.org/276396@main
> Reviewed commits have been landed. Closing PR #26175 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug