Source/WebCore/dom/EventTarget.h
@@ -202,9 +202,9 @@ protected:
         HasFormAssociatedCustomElementInterface = 1 << 11,
         HasShadowRootContainingSlots = 1 << 12,
         IsInTopLayer = 1 << 13,
+        CapturedInViewTransition = 1 << 14,
         // SVGElement bits
-        HasPendingResources = 1 << 14,
-        // 1 Free bits
+        HasPendingResources = 1 << 15,
     };
 
     EventTargetData& ensureEventTargetData()
