Source/WebCore/dom/ViewTransition.cpp
@@ -345,6 +345,7 @@ ExceptionOr<void> ViewTransition::captureOldState()
 
                 // FIXME: Skip fragmented content.
 
+                element.setCapturedInViewTransition(true);
                 captureElements.append(element);
             }
             return { };
@@ -365,9 +366,13 @@ ExceptionOr<void> ViewTransition::captureOldState()
 
         auto transitionName = element->computedStyle()->viewTransitionName();
         m_namedElements.add(transitionName->name, capture);
+    }
 
+    for (auto& element : captureElements) {
+        element->setCapturedInViewTransition(false);
         element->invalidateStyleAndLayerComposition();
     }
+
     return { };
 }
 
@@ -495,6 +500,11 @@ void ViewTransition::activateViewTransition()
         return;
     }
 
+    for (auto& [name, capturedElement] : m_namedElements.map()) {
+        if (RefPtr newElement = capturedElement->newElement.get())
+            newElement->setCapturedInViewTransition(true);
+    }
+
     setupTransitionPseudoElements();
     checkFailure = updatePseudoElementStyles();
     if (checkFailure.hasException()) {
@@ -568,6 +578,11 @@ void ViewTransition::clearViewTransition()
             Styleable(*documentElement, Style::PseudoElementIdentifier { PseudoId::ViewTransitionNew, name }).cancelStyleOriginatedAnimations();
             Styleable(*documentElement, Style::PseudoElementIdentifier { PseudoId::ViewTransitionOld, name }).cancelStyleOriginatedAnimations();
         }
+    }
+
+    for (auto& [name, capturedElement] : m_namedElements.map()) {
+        if (RefPtr newElement = capturedElement->newElement.get())
+            newElement->setCapturedInViewTransition(false);
     }
 
     protectedDocument()->setHasViewTransitionPseudoElementTree(false);
